--- a/COVID19CORONAVIRUSPANDEMIC.Rmd
+++ b/COVID19CORONAVIRUSPANDEMIC.Rmd
@@ -3,14 +3,15 @@ title: "Untitled"
 author: "Priyanka"
 date: "1/4/2021"
 output: github_document
+html_preview: True
 #   pdf_document: default
 #   html_document: default
 # always_allow_html: yes
-knit: (function("C:\R_DS\COVID19CORONAVIRUSPANDEMIC.rmd", encoding) {
+knit: (function("C:/R_DS/COVID19CORONAVIRUSPANDEMIC.rmd", encoding) {
   out_dir <- 'docs';
-  rmarkdown::render("C:\R_DS\COVID19CORONAVIRUSPANDEMIC.rmd",
+  rmarkdown::render("C:/R_DS/COVID19CORONAVIRUSPANDEMIC.rmd",
  encoding=encoding,
- output_file=file.path(dirname("C:\R_DS\COVID19CORONAVIRUSPANDEMIC.rmd"), out_dir, 'index.html'))})
+ output_file=file.path(dirname("C:/R_DS/COVID19CORONAVIRUSPANDEMIC.rmd"), out_dir, 'index.html'))})
 ---
  
 ```{r setup, include=FALSE}
@@ -591,76 +592,4 @@ Scores_comp <- data.frame(Actual  = test$precautions,
                           Predcited = pred)
 head(Scores_comp)
 plot(Scores_comp)
-```
-
-```{r}
-
-```
-```{r}
-
-
-```
-```{r}
-
-
-```
-```{r}
-
-```
-```{r}
-
-
-
-
-
-```
-```{r}
-
-
-```
-```{r}
-
-
-```
-```{r}
-
-```
-```{r}
-
-```
-```{r}
-
-
-```
-```{r}
-
-
-```
-```{r}
-
-```
-```{r}
-
-```
-```{r}
-
-
-```
-```{r}
-
-
-```
-```{r}
-
-```
-```{r}
-
-```
-```{r}
-
-
-```
-```{r}
-
-
 ```
